# sophia-intel-ai

./: .ai-rules.json  .aider.conf.yml  .architecture.yaml  .codexrc.yml.example  .coveragerc  .cursorrules  .dockerignore  .env.example  .env.mcp.example  .env.production.example  .env.production.template  .env.sophia.example  .env.template  .envrc  .flake8  .gitignore  .hygiene.yml  .pids  .pre-commit-config.yaml  .pre-commit-skip.md  .roomodes  .secrets.baseline  ACCEPTANCE.md  ACCEPTANCE_REPORT.md  ACTION_FRAMEWORK_DESIGN.md  ACTION_SCHEMAS.md  ADVANCED_RAG_ENHANCEMENTS_ANALYSIS.md  ADVANCED_RAG_IMPLEMENTATION.py  AGENTS.md  AGENT_FACTORY_MIGRATION_REQUIRED.md  AGENT_FACTORY_README.md  AGENT_INTELLIGENCE_HUB.md  AGENT_PLAN_CLEANUP_INSTRUCTIONS.md  AGENT_SPECIALIZATION_DESIGN.md  AGENT_STARTUP_PROMPT.md  AGNO_ARCHITECTURE_DESIGN.md  AGNO_AUTONOMOUS_UPGRADE_MASTER_PLAN.md  AGNO_EMBEDDING_IMPLEMENTATION_SUMMARY.md  AGNO_FRAMEWORK_CLEANUP_REPORT.md  AIMLAPI_AGENT_INTEGRATION.md  (+1125 more)
.ai/: MASTER_RULES.yaml  README.md
.ai-instructions/: README.md  orchestration-standards.md
.claude/: mcp.local.json  mcp_servers.json
.cursor/: mcp.json  settings.json
.devcontainer/: README.md  devcontainer.json  post-create.sh  post-start.sh  postCreateCommand.sh  recovery.sh  setup.sh  startup.sh  ultimate-setup.sh
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.m3-config/: README.md  install-codex.sh  setup-neon.sh  verify.sh
.next/: prerender-manifest.json  trace
.prompts/: coding_agent_base.txt  coding_agent_base.yaml  debug-issue.md  deploy-infra.md
.roo/: custom_modes.yaml  modes.json
POLICIES/: access.yml  authority.yml  routing.yml
PROMPTS/: README.md
agent-ui/: Dockerfile  SOPHIA_ARTEMIS_IMPLEMENTATION_ROADMAP.md  SOPHIA_DASHBOARDS_README.md  next.config.ts  package-lock.json  package.json
agent_catalog/: catalog.json
agents/: AGENT_ENV_EXAMPLES.md  __init__.py  base_agent.py  coding_agent.py  coding_swarm.py  load_env.py  performance_optimizer.py  persona_manager.py  research_agent.py  sales_coach_agent.py  search_engine.py  swarm_api.py  swarm_coordinator.py  swarm_manager.py
agno/: __init__.py  memory.py  storage.py  tools.py
agno_core/: telemetry_wire.py
api-gateway/: lambda_inference_client.py  main.py  railway.toml  requirements.txt
app/: __init__.py  agno_bridge.py  agno_bridge.py.bak  ai_orchestrator.py  artemis_demo.py  config_module.py  elite_portkey_config.py  errors.py  main.py  main_nl.py  main_unified.py  main_websocket.py  playground.py  portkey_config.py  ports.py  requirements.txt  server_shim.py  settings.py
archive/: ARCHIVE_INDEX.md  artemis_technical_operations.html  multi-chat-artemis.html  sophia_intelligence_hub.html  test_sophia_hub_integration.html
artemis-v2/: __init__.py
artemis_agent_catalog/: catalog.json
audits/: repository_continuity_architecture_plan.md
automation/: README.md
backend/: DEPLOYMENT_TRIGGER.txt  DEPRECATED.md  Dockerfile.backup  FORCE_DEPLOY.txt  analytics_middleware.py  application.py  asip_chat_bridge.py  chat_proxy.py  chat_router.py  context_manager.py  enhanced_auth.py  enhanced_orchestrator.py  enhanced_web_research.py  intelligent_development_pipeline.py  lambda_endpoints.py  main.py  main_backup.py  notion_service.py  observability_service.py  orchestrator.py  railway.toml  requirements.txt  scalable_main.py  simple_main.py  simple_sophia_app.py  test_endpoint.py  test_fusion_metrics_api.py  ultimate_main.py  ultimate_orchestrator.py  unified_chat_service.py  unified_sophia_app.py  web_access_service.py
backend_old_20250817_203035/: __init__.py  consolidated_services.py  deploy.sh  requirements.txt
backup_hybrid_20250905_183452/: reliable_provider.py
benchmarks/: performance_suite_2025.py
brand/: README.md
bridge/: model_cost_endpoints.py  websocket_manager.py
builder-agno-system/: package-lock.json  package.json
builder-cli/: forge.py
builder_cli/: __init__.py  forge.py
cli/: sophia_cli.py  swarm_cli.py
codex-setup/: CODEX_SETUP_INSTRUCTIONS.md  codex_setup_agent_prompt.json  execute_codex_setup.sh
config/: ENV_KEYS.md  __init__.py  approved_models.py  base.json  budgets.yaml  config.py  credentials.enc  data_services_template.env  database_status.md  embedding_models.yaml  env.schema.json  environment-separation.md  indexer.yaml  integration_adapter.py  keys_registry.json  manager.py  model_aliases.json  model_manager.py  models.allowlist.yaml  models.json  models.yaml  models_2025.yaml  neon_actual.env  neon_config.json  neon_placeholder.env  neon_placeholder.json  nginx.conf  openrouter_config.json  pm2.ecosystem.config.js  portkey_config.json  portkey_virtual_keys.json  prometheus.yml  provider_config.json  python_settings.py  redis.conf  redis_config.json  redis_connection.env  redis_placeholder.env  scaffolding_config.yaml  security-policies.md  (+9 more)
connectors/: __init__.py  github_conn.py  pulumi_conn.py
dashboard/: app.py  app_fixed.py  app_live.py  fly.toml  requirements.txt  version.py
dashboards/: sophia_chat_dashboard.py
database/: neon-schema.sql
deploy/: README.md  cloud-deploy.sh  fly-squads.toml  fly-ui.toml  fly-unified-api.toml  health-monitor.py  test-deployment.sh
deployment/: alternative-deployment.py  complete-production-deploy.py  configure-dns.sh  dns-configuration.py  production-deploy.py  railway-api-deploy.py
deployment_results/: swarm_deployment_20250903_160846.json  swarm_deployment_20250903_160856.json  swarm_deployment_20250903_160916.json  swarm_deployment_20250903_161110.json  swarm_deployment_report_20250903_160846.md  swarm_deployment_report_20250903_160856.md  swarm_deployment_report_20250903_160916.md  swarm_deployment_report_20250903_161110.md
dev-mcp-unified/: .env.template  README.md  fix_server.sh  mcp  open-ui.sh  quickstart.sh  restart.sh  run_local.sh  setup.py  smoke_test_inproc.py  start_mcp_server.sh  test_all_features.py  test_local.sh  test_models.py  (+1 more)
tools/audit-cli/: README.md  pyproject.toml
tools/audit-cli/sophia_audit_cli/: cli.py
(+3617 files in other folders)
