[project]
name = "sophia-audit-cli"
version = "0.2.0"
description = "Audit CLI for codebase structure and repository checks"
readme = "README.md"
authors = [{name = "Sophia Intel AI"}]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
audit = "sophia_audit_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
